fix header alignment

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -38,7 +38,7 @@
 		}
 	}
 	.nHeader {
-		padding-left: 0.6em;
+		padding-left: 0.4em;
 		font-size: 2.5em;
 		margin-bottom: 0em;
 	}
