--- a/src/components/logo/logo.module.scss
+++ b/src/components/logo/logo.module.scss
@@ -38,7 +38,7 @@
 		transition: all ease-in 0.5s;
 		flex-direction: column;
 		margin: 0;
-		margin-bottom: 0.5em;
+
 		h1 {
 			margin: 0.3em 0;
 			font-size: 2em;
