--- a/src/components/nav/nav.module.scss
+++ b/src/components/nav/nav.module.scss
@@ -37,6 +37,7 @@ h1 {
 	.logoGroup {
 		flex-direction: row;
 		align-items: flex-end;
+		margin-bottom: 0.5em;
 	}
 	.sticky {
 		height: 80px;
